// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VerticalTimeline /> should render a vertical timeline 1`] = `
.c0 {
  margin-bottom: 20px;
  padding-bottom: 20px;
}

.c1 {
  text-align: right;
  width: 4rem;
  font-size: 14px;
  font-weight: 600;
}

.c2 {
  position: relative;
}

.c2::before {
  content: '';
  position: absolute;
  top: 12px;
  left: 87px;
  height: calc(100% - 16px);
  width: 2px;
  background: #DFE5E8;
}

.c3 {
  margin: 40px 0;
  position: relative;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c5 {
  position: absolute;
  width: auto;
  height: 0;
  left: 88px;
  top: 12px;
}

.c5 > * {
  top: -50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c4 {
  text-align: right;
  color: hsl(210,13.4%,47.2%);
  position: absolute;
  width: 4rem;
  font-size: 14px;
  top: 6px;
  line-height: 1;
}

.c6 {
  border: 2px solid rgb(223,229,232);
  position: absolute;
  left: 50%;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  border-radius: 50%;
  background: white;
}

.c7 {
  margin-left: 7rem;
}

<VerticalTimeline
  year="2006"
>
  <styled.div
    className="vertical-timeline"
  >
    <div
      className="vertical-timeline c0"
    >
      <styled.div>
        <div
          className="c1"
        >
          2006
        </div>
      </styled.div>
      <styled.div>
        <div
          className="c2"
        >
          <VerticalTimelineEvent
            eventDate="21 Apr"
          >
            <styled.div
              className="vertical-timeline-event"
            >
              <div
                className="vertical-timeline-event c3"
              >
                <styled.span>
                  <span
                    className="c4"
                  >
                    21 Apr
                  </span>
                </styled.span>
                <styled.div>
                  <div
                    className="c5"
                  >
                    <styled.span>
                      <span
                        className="c6"
                      />
                    </styled.span>
                  </div>
                </styled.div>
                <styled.div>
                  <div
                    className="c7"
                  >
                    Event that happened
                  </div>
                </styled.div>
              </div>
            </styled.div>
          </VerticalTimelineEvent>
        </div>
      </styled.div>
    </div>
  </styled.div>
</VerticalTimeline>
`;

exports[`<VerticalTimeline /> should render a vertical timeline without a year 1`] = `
.c0 {
  margin-bottom: 20px;
  padding-bottom: 20px;
}

.c1 {
  text-align: right;
  width: 4rem;
  font-size: 14px;
  font-weight: 600;
}

.c2 {
  position: relative;
}

.c2::before {
  content: '';
  position: absolute;
  top: 12px;
  left: 87px;
  height: calc(100% - 16px);
  width: 2px;
  background: #DFE5E8;
}

.c3 {
  margin: 40px 0;
  position: relative;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c5 {
  position: absolute;
  width: auto;
  height: 0;
  left: 88px;
  top: 12px;
}

.c5 > * {
  top: -50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c4 {
  text-align: right;
  color: hsl(210,13.4%,47.2%);
  position: absolute;
  width: 4rem;
  font-size: 14px;
  top: 6px;
  line-height: 1;
}

.c6 {
  border: 2px solid rgb(223,229,232);
  position: absolute;
  left: 50%;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  border-radius: 50%;
  background: white;
}

.c7 {
  margin-left: 7rem;
}

<VerticalTimeline>
  <styled.div
    className="vertical-timeline"
  >
    <div
      className="vertical-timeline c0"
    >
      <styled.div>
        <div
          className="c1"
        />
      </styled.div>
      <styled.div>
        <div
          className="c2"
        >
          <VerticalTimelineEvent
            eventDate="21 Apr"
          >
            <styled.div
              className="vertical-timeline-event"
            >
              <div
                className="vertical-timeline-event c3"
              >
                <styled.span>
                  <span
                    className="c4"
                  >
                    21 Apr
                  </span>
                </styled.span>
                <styled.div>
                  <div
                    className="c5"
                  >
                    <styled.span>
                      <span
                        className="c6"
                      />
                    </styled.span>
                  </div>
                </styled.div>
                <styled.div>
                  <div
                    className="c7"
                  >
                    Event that happened
                  </div>
                </styled.div>
              </div>
            </styled.div>
          </VerticalTimelineEvent>
        </div>
      </styled.div>
    </div>
  </styled.div>
</VerticalTimeline>
`;
